--- a/src/path-finding-visualizer/grid.css
+++ b/src/path-finding-visualizer/grid.css
@@ -18,6 +18,9 @@
     border: 1px solid rgb(0, 133, 177);
     background-color: rgb(133, 225, 255);
     display: inline-block;
+
+    animation-name: Visited;
+    animation-duration: 800ms;
   }
 
   .WallNode{
@@ -29,6 +32,11 @@
     border: 1px solid rgb(0, 133, 177);
     background-color: rgb(0, 133, 177);
     display: inline-block;
+  }
+
+  @keyframes Visited{
+    from {background-color: white;}
+    to {background-color: rgb(133, 225, 255);}
   }
 
   .StartNode{
