--- a/src/path-finding-visualizer/grid.css
+++ b/src/path-finding-visualizer/grid.css
@@ -1,62 +1,88 @@
 .Node {
+  margin-left: -1px;
+  margin-top: -2px;
+  margin-bottom: -3px;
+  width: 28px;
+  height: 28px;
+  border: 1px solid rgb(0, 133, 177);
+  display: inline-block;
+}
 
-    margin-left: -1px;
-    margin-top: -2px;
-    margin-bottom: -3px;
-    width: 28px;
-    height: 28px;
-    border: 1px solid rgb(0, 133, 177);
-    display: inline-block;
+.VisitedNode {
+  margin-left: -1px;
+  margin-top: -2px;
+  margin-bottom: -3px;
+  width: 28px;
+  height: 28px;
+  border: 1px solid rgb(0, 133, 177);
+  background-color: rgb(133, 225, 255);
+  display: inline-block;
+
+  animation-name: Visited;
+  animation-duration: 800ms;
+}
+
+.ShortestPathNode {
+  margin-left: -1px;
+  margin-top: -2px;
+  margin-bottom: -3px;
+  width: 28px;
+  height: 28px;
+  border: 1px solid rgb(0, 133, 177);
+  background-color: rgb(255, 202, 58);
+  display: inline-block;
+
+  /* animation-name: Visited;
+  animation-duration: 800ms; */
+}
+
+.WallNode {
+  margin-left: -1px;
+  margin-top: -2px;
+  margin-bottom: -3px;
+  width: 28px;
+  height: 28px;
+  border: 1px solid rgb(0, 133, 177);
+  background-color: rgb(0, 133, 177);
+  display: inline-block;
+}
+
+@keyframes Visited {
+  from {
+    background-color: white;
   }
-
-  .VisitedNode {
-    margin-left: -1px;
-    margin-top: -2px;
-    margin-bottom: -3px;
-    width: 28px;
-    height: 28px;
-    border: 1px solid rgb(0, 133, 177);
+  to {
     background-color: rgb(133, 225, 255);
-    display: inline-block;
-
-    animation-name: Visited;
-    animation-duration: 800ms;
   }
+}
 
-  .WallNode{
-    margin-left: -1px;
-    margin-top: -2px;
-    margin-bottom: -3px;
-    width: 28px;
-    height: 28px;
-    border: 1px solid rgb(0, 133, 177);
-    background-color: rgb(0, 133, 177);
-    display: inline-block;
+@keyframes ShortestPath {
+  from {
+    background-color: rgb(133, 225, 255);
   }
+  to {
+    background-color: rgb(255, 202, 58);
+  }
+}
 
-  @keyframes Visited{
-    from {background-color: white;}
-    to {background-color: rgb(133, 225, 255);}
-  }
+.StartNode {
+  margin-left: -1px;
+  margin-top: -2px;
+  margin-bottom: -3px;
+  width: 28px;
+  height: 28px;
+  border: 1px solid rgb(0, 255, 0);
+  background-color: rgb(0, 255, 0);
+  display: inline-block;
+}
 
-  .StartNode{
-    margin-left: -1px;
-    margin-top: -2px;
-    margin-bottom: -3px;
-    width: 28px;
-    height: 28px;
-    border: 1px solid rgb(0, 255, 0);
-    background-color: rgb(0, 255, 0);
-    display: inline-block;
-  }
-
-  .EndNode{
-    margin-left: -1px;
-    margin-top: -2px;
-    margin-bottom: -3px;
-    width: 28px;
-    height: 28px;
-    border: 1px solid rgb(255, 0, 0);
-    background-color: rgb(255, 0, 0);
-    display: inline-block;
-  }
+.EndNode {
+  margin-left: -1px;
+  margin-top: -2px;
+  margin-bottom: -3px;
+  width: 28px;
+  height: 28px;
+  border: 1px solid rgb(255, 0, 0);
+  background-color: rgb(255, 0, 0);
+  display: inline-block;
+}
