--- a/src/path-finding-visualizer/grid.css
+++ b/src/path-finding-visualizer/grid.css
@@ -1,9 +1,14 @@
+:root {
+  --nodeSize: 0px;
+  --leftMargin: 0px;
+}
+
 .Node {
   margin-left: -1px;
   margin-top: -2px;
   margin-bottom: -3px;
-  width: 28px;
-  height: 28px;
+  width: var(--nodeSize);
+  height: var(--nodeSize);
   border: 1px solid rgb(0, 133, 177);
   display: inline-block;
 }
@@ -12,36 +17,39 @@
   margin-left: -1px;
   margin-top: -2px;
   margin-bottom: -3px;
-  width: 28px;
-  height: 28px;
+  width: var(--nodeSize);
+  height: var(--nodeSize);
   border: 1px solid rgb(0, 133, 177);
   background-color: rgb(133, 225, 255);
   display: inline-block;
 
   animation-name: Visited;
-  animation-duration: 800ms;
+  animation-duration: 0ms;
 }
 
 .ShortestPathNode {
+  position: relative;
   margin-left: -1px;
   margin-top: -2px;
   margin-bottom: -3px;
-  width: 28px;
-  height: 28px;
+  width: var(--nodeSize);
+  height: var(--nodeSize);
   border: 1px solid rgb(0, 133, 177);
   background-color: rgb(255, 202, 58);
   display: inline-block;
 
-  /* animation-name: Visited;
-  animation-duration: 800ms; */
+  z-index: 9 !important;
+
+  animation-name: ShortestPath;
+  animation-duration: 0ms;
 }
 
 .WallNode {
   margin-left: -1px;
   margin-top: -2px;
   margin-bottom: -3px;
-  width: 28px;
-  height: 28px;
+  width: var(--nodeSize);
+  height: var(--nodeSize);
   border: 1px solid rgb(0, 133, 177);
   background-color: rgb(0, 133, 177);
   display: inline-block;
@@ -69,8 +77,8 @@
   margin-left: -1px;
   margin-top: -2px;
   margin-bottom: -3px;
-  width: 28px;
-  height: 28px;
+  width: var(--nodeSize);
+  height: var(--nodeSize);
   border: 1px solid rgb(0, 255, 0);
   background-color: rgb(0, 255, 0);
   display: inline-block;
@@ -80,8 +88,8 @@
   margin-left: -1px;
   margin-top: -2px;
   margin-bottom: -3px;
-  width: 28px;
-  height: 28px;
+  width: var(--nodeSize);
+  height: var(--nodeSize);
   border: 1px solid rgb(255, 0, 0);
   background-color: rgb(255, 0, 0);
   display: inline-block;
