--- a/src/path-finding-visualizer/grid.css
+++ b/src/path-finding-visualizer/grid.css
@@ -1,25 +1,37 @@
 :root {
   --nodeSize: 0px;
   --leftMargin: 0px;
+  /* --nodeLeftMargin: -1px;
+  --nodeTopMargin: -2px;
+  --nodeBottomMargin: -3px; */
+
+  --nodeLeftMargin: 1px;
+  --nodeTopMargin: 0px;
+  --nodeBottomMargin: -3px;
+  --nodeRightmargin: 0px;
 }
 
 .Node {
-  margin-left: -1px;
-  margin-top: -2px;
-  margin-bottom: -3px;
+  margin-left: var(--nodeLeftMargin);
+  margin-top: var(--nodeTopMargin);
+  margin-bottom: var(--nodeBottomMargin);
+  margin-right: var(--nodeRightmargin);
   width: var(--nodeSize);
   height: var(--nodeSize);
-  border: 1px solid rgb(0, 133, 177);
+  box-shadow:0px 0px 0px 1px rgb(0, 133, 177);
+  /* border: 1px solid rgb(0, 133, 177); */
   display: inline-block;
 }
 
 .VisitedNode {
-  margin-left: -1px;
-  margin-top: -2px;
-  margin-bottom: -3px;
+  margin-left: var(--nodeLeftMargin);
+  margin-top: var(--nodeTopMargin);
+  margin-bottom: var(--nodeBottomMargin);
+  margin-right: var(--nodeRightmargin);
   width: var(--nodeSize);
   height: var(--nodeSize);
-  border: 1px solid rgb(0, 133, 177);
+  box-shadow:0px 0px 0px 1px rgb(0, 133, 177);
+  /* border: 1px solid rgb(0, 133, 177); */
   background-color: rgb(133, 225, 255);
   display: inline-block;
 
@@ -29,12 +41,14 @@
 
 .ShortestPathNode {
   position: relative;
-  margin-left: -1px;
-  margin-top: -2px;
-  margin-bottom: -3px;
+  margin-left: var(--nodeLeftMargin);
+  margin-top: var(--nodeTopMargin);
+  margin-bottom: var(--nodeBottomMargin);
+  margin-right: var(--nodeRightmargin);
   width: var(--nodeSize);
   height: var(--nodeSize);
-  border: 1px solid rgb(0, 133, 177);
+  box-shadow:0px 0px 0px 1px rgb(0, 133, 177);
+  /* border: 1px solid rgb(0, 133, 177); */
   background-color: rgb(255, 202, 58);
   display: inline-block;
 
@@ -45,12 +59,14 @@
 }
 
 .WallNode {
-  margin-left: -1px;
-  margin-top: -2px;
-  margin-bottom: -3px;
+  margin-left: var(--nodeLeftMargin);
+  margin-top: var(--nodeTopMargin);
+  margin-bottom: var(--nodeBottomMargin);
+  margin-right: var(--nodeRightmargin);
   width: var(--nodeSize);
   height: var(--nodeSize);
-  border: 1px solid rgb(0, 133, 177);
+  box-shadow:0px 0px 0px 1px rgb(0, 133, 177);
+  /* border: 1px solid rgb(0, 133, 177); */
   background-color: rgb(0, 133, 177);
   display: inline-block;
 }
@@ -74,23 +90,27 @@
 }
 
 .StartNode {
-  margin-left: -1px;
-  margin-top: -2px;
-  margin-bottom: -3px;
+  margin-left: var(--nodeLeftMargin);
+  margin-top: var(--nodeTopMargin);
+  margin-bottom: var(--nodeBottomMargin);
+  margin-right: var(--nodeRightmargin);
   width: var(--nodeSize);
   height: var(--nodeSize);
-  border: 1px solid rgb(0, 255, 0);
+  box-shadow:0px 0px 0px 1px rgb(0, 133, 177);
+  /* border: 1px solid rgb(0, 255, 0); */
   background-color: rgb(0, 255, 0);
   display: inline-block;
 }
 
 .EndNode {
-  margin-left: -1px;
-  margin-top: -2px;
-  margin-bottom: -3px;
+  margin-left: var(--nodeLeftMargin);
+  margin-top: var(--nodeTopMargin);
+  margin-bottom: var(--nodeBottomMargin);
+  margin-right: var(--nodeRightmargin);
   width: var(--nodeSize);
   height: var(--nodeSize);
-  border: 1px solid rgb(255, 0, 0);
+  box-shadow:0px 0px 0px 1px rgb(0, 133, 177);
+  /* border: 1px solid rgb(255, 0, 0); */
   background-color: rgb(255, 0, 0);
   display: inline-block;
 }
