--- a/src/path-finding-visualizer/grid.css
+++ b/src/path-finding-visualizer/grid.css
@@ -1,14 +1,17 @@
 :root {
   --nodeSize: 0px;
   --leftMargin: 0px;
-  /* --nodeLeftMargin: -1px;
-  --nodeTopMargin: -2px;
-  --nodeBottomMargin: -3px; */
-
   --nodeLeftMargin: 1px;
   --nodeTopMargin: 0px;
-  --nodeBottomMargin: -3px;
+  --nodeBottomMargin: -5px;
   --nodeRightmargin: 0px;
+}
+
+.Grid {}
+
+.SuperColor {
+  background-color: aquamarine;
+  color: aquamarine;
 }
 
 .Node {
@@ -18,8 +21,7 @@
   margin-right: var(--nodeRightmargin);
   width: var(--nodeSize);
   height: var(--nodeSize);
-  box-shadow:0px 0px 0px 1px rgb(0, 133, 177);
-  /* border: 1px solid rgb(0, 133, 177); */
+  box-shadow: 0px 0px 0px 1px rgb(0, 133, 177);
   display: inline-block;
 }
 
@@ -30,8 +32,7 @@
   margin-right: var(--nodeRightmargin);
   width: var(--nodeSize);
   height: var(--nodeSize);
-  box-shadow:0px 0px 0px 1px rgb(0, 133, 177);
-  /* border: 1px solid rgb(0, 133, 177); */
+  box-shadow: 0px 0px 0px 1px rgb(0, 133, 177);
   background-color: rgb(133, 225, 255);
   display: inline-block;
 
@@ -47,8 +48,7 @@
   margin-right: var(--nodeRightmargin);
   width: var(--nodeSize);
   height: var(--nodeSize);
-  box-shadow:0px 0px 0px 1px rgb(0, 133, 177);
-  /* border: 1px solid rgb(0, 133, 177); */
+  box-shadow: 0px 0px 0px 1px rgb(0, 133, 177);
   background-color: rgb(255, 202, 58);
   display: inline-block;
 
@@ -65,8 +65,7 @@
   margin-right: var(--nodeRightmargin);
   width: var(--nodeSize);
   height: var(--nodeSize);
-  box-shadow:0px 0px 0px 1px rgb(0, 133, 177);
-  /* border: 1px solid rgb(0, 133, 177); */
+  box-shadow: 0px 0px 0px 1px rgb(0, 133, 177);
   background-color: rgb(0, 133, 177);
   display: inline-block;
 }
@@ -75,6 +74,7 @@
   from {
     background-color: white;
   }
+
   to {
     background-color: rgb(133, 225, 255);
   }
@@ -84,6 +84,7 @@
   from {
     background-color: rgb(133, 225, 255);
   }
+
   to {
     background-color: rgb(255, 202, 58);
   }
@@ -96,8 +97,7 @@
   margin-right: var(--nodeRightmargin);
   width: var(--nodeSize);
   height: var(--nodeSize);
-  box-shadow:0px 0px 0px 1px rgb(0, 133, 177);
-  /* border: 1px solid rgb(0, 255, 0); */
+  box-shadow: 0px 0px 0px 1px rgb(0, 133, 177);
   background-color: rgb(0, 255, 0);
   display: inline-block;
 }
@@ -109,8 +109,7 @@
   margin-right: var(--nodeRightmargin);
   width: var(--nodeSize);
   height: var(--nodeSize);
-  box-shadow:0px 0px 0px 1px rgb(0, 133, 177);
-  /* border: 1px solid rgb(255, 0, 0); */
+  box-shadow: 0px 0px 0px 1px rgb(0, 133, 177);
   background-color: rgb(255, 0, 0);
   display: inline-block;
 }
