--- a/src/path-finding-visualizer/path-finding-visualizer.css
+++ b/src/path-finding-visualizer/path-finding-visualizer.css
@@ -1,16 +1,14 @@
-/* .PathFindingVisualizer {
-  display: flex;
-  position: relative;
-  align-items: flex-start;
-  justify-content:center;
-} */
-
 .PathFindingVisualizer {
-  width:100%;
+  width: 100%;
+  height:100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-  position:fixed;
+}
 
-  bottom:0px;
-
-  text-align:center;
+.DropDownDiv{
+  display: flex;
+  align-items: center;
+  justify-content: 'center';
 }
