--- a/src/path-finding-visualizer/grid.css
+++ b/src/path-finding-visualizer/grid.css
@@ -7,11 +7,26 @@
   --nodeRightmargin: 0px;
 }
 
-.Grid {}
+.GridContainer {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-items: center;
 
-.SuperColor {
-  background-color: aquamarine;
-  color: aquamarine;
+}
+
+.Grid {
+  display: flex;
+
+  flex-direction: column;
+
+  align-self: center;
+  justify-self: center;
+
+  border-top: 2px solid rgb(35, 57, 91);
+  border-right: 2px solid rgb(35, 57, 91);
+  border-left: 1px solid rgb(35, 57, 91);
+  border-bottom: 1px solid rgb(35, 57, 91);
 }
 
 .Node {
@@ -21,7 +36,7 @@
   margin-right: var(--nodeRightmargin);
   width: var(--nodeSize);
   height: var(--nodeSize);
-  box-shadow: 0px 0px 0px 1px rgb(0, 133, 177);
+  box-shadow: 0px 0px 0px 1px rgb(35, 57, 91);
   display: inline-block;
 }
 
@@ -32,12 +47,12 @@
   margin-right: var(--nodeRightmargin);
   width: var(--nodeSize);
   height: var(--nodeSize);
-  box-shadow: 0px 0px 0px 1px rgb(0, 133, 177);
-  background-color: rgb(133, 225, 255);
+  box-shadow: 0px 0px 0px 1px rgb(38, 63, 100);
+  background-color: rgba(118, 218, 221, 0.8);
   display: inline-block;
 
   animation-name: Visited;
-  animation-duration: 0ms;
+  animation-duration: 300ms;
 }
 
 .ShortestPathNode {
@@ -48,14 +63,14 @@
   margin-right: var(--nodeRightmargin);
   width: var(--nodeSize);
   height: var(--nodeSize);
-  box-shadow: 0px 0px 0px 1px rgb(0, 133, 177);
-  background-color: rgb(255, 202, 58);
+  box-shadow: 0px 0px 0px 1px rgb(38, 63, 100);
+  background-color: rgb(250, 248, 108);
   display: inline-block;
 
   z-index: 9 !important;
 
   animation-name: ShortestPath;
-  animation-duration: 0ms;
+  animation-duration: 100ms;
 }
 
 .WallNode {
@@ -65,28 +80,30 @@
   margin-right: var(--nodeRightmargin);
   width: var(--nodeSize);
   height: var(--nodeSize);
-  box-shadow: 0px 0px 0px 1px rgb(0, 133, 177);
-  background-color: rgb(0, 133, 177);
+  box-shadow: 0px 0px 0px 1px rgb(21, 61, 107);
+  background-color: rgb(21, 61, 107);
   display: inline-block;
 }
 
 @keyframes Visited {
   from {
-    background-color: white;
+    background-color: rgba(100, 151, 209, 0.8);
+    border-width: 0;
   }
 
   to {
-    background-color: rgb(133, 225, 255);
+    border-width: 100%;
+    background-color: rgba(118, 218, 221, 0.8);
   }
 }
 
 @keyframes ShortestPath {
   from {
-    background-color: rgb(133, 225, 255);
+    background-color: rgba(118, 218, 221);
   }
 
   to {
-    background-color: rgb(255, 202, 58);
+    background-color: rgb(250, 248, 108);
   }
 }
 
