Fixed missing end/start node when resizing, Fixed isVisualizing for the maze generation

--- a/src/path-finding-visualizer/path-finding-visualizer.css
+++ b/src/path-finding-visualizer/path-finding-visualizer.css
@@ -26,6 +26,16 @@
 }
 
 .VisualizeButton {
+  /* supported by Chrome and Opera */
+  -webkit-user-select: none;
+  /* Safari */
+  -khtml-user-select: none;
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+
   /* width: 150px;
   height: 35px; */
   margin-right: 50px;
@@ -40,6 +50,16 @@
 }
 
 .ResetButton {
+  /* supported by Chrome and Opera */
+  -webkit-user-select: none;
+  /* Safari */
+  -khtml-user-select: none;
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+
   width: 150px;
   height: 35px;
   text-align: left;
