--- a/src/path-finding-visualizer/grid.css
+++ b/src/path-finding-visualizer/grid.css
@@ -55,6 +55,18 @@
   animation-duration: 300ms;
 }
 
+.VisitedNodeNoAnim {
+  margin-left: var(--nodeLeftMargin);
+  margin-top: var(--nodeTopMargin);
+  margin-bottom: var(--nodeBottomMargin);
+  margin-right: var(--nodeRightmargin);
+  width: var(--nodeSize);
+  height: var(--nodeSize);
+  box-shadow: 0px 0px 0px 1px rgb(38, 63, 100);
+  background-color: rgba(118, 218, 221, 0.8);
+  display: inline-block;
+}
+
 .ShortestPathNode {
   position: relative;
   margin-left: var(--nodeLeftMargin);
@@ -71,6 +83,21 @@
 
   animation-name: ShortestPath;
   animation-duration: 100ms;
+}
+
+.ShortestPathNodeNoAnim {
+  position: relative;
+  margin-left: var(--nodeLeftMargin);
+  margin-top: var(--nodeTopMargin);
+  margin-bottom: var(--nodeBottomMargin);
+  margin-right: var(--nodeRightmargin);
+  width: var(--nodeSize);
+  height: var(--nodeSize);
+  box-shadow: 0px 0px 0px 1px rgb(38, 63, 100);
+  background-color: rgb(250, 248, 108);
+  display: inline-block;
+
+  z-index: 9 !important;
 }
 
 .WallNode {
@@ -114,10 +141,23 @@
   margin-right: var(--nodeRightmargin);
   width: var(--nodeSize);
   height: var(--nodeSize);
-  box-shadow: 0px 0px 0px 1px rgb(35, 57, 91);
-  background-color: rgb(0, 255, 0);
+  box-shadow: 0px 0px 0px 1px rgbrgb(21, 61, 107);
+  /* background-color: rgb(16, 196, 139); */
   display: inline-block;
+  cursor: grab;
 }
+
+.inside-end {
+  position: relative !important;
+  background-color: rgb(216, 30, 91) !important;
+  border-radius: 50%;
+  width: 20px !important;
+  height: 20px !important;
+  left: 2px !important;
+  top: 2px !important;
+  cursor: grab;
+}
+
 
 .EndNode {
   margin-left: var(--nodeLeftMargin);
@@ -126,7 +166,20 @@
   margin-right: var(--nodeRightmargin);
   width: var(--nodeSize);
   height: var(--nodeSize);
-  box-shadow: 0px 0px 0px 1px rgb(35, 57, 91);
-  background-color: rgb(255, 0, 0);
+  box-shadow: 0px 0px 0px 1px rgb(21, 61, 107);
+  /* background-color: rgb(216, 30, 91); */
   display: inline-block;
+  cursor: grab;
+}
+
+.inside-start {
+  position: relative !important;
+  background-color: rgb(10, 197, 57) !important;
+  border-radius: 50%;
+
+  width: 20px !important;
+  height: 20px !important;
+  left: 2px !important;
+  top: 2px !important;
+  cursor: grab;
 }
