--- a/src/path-finding-visualizer/path-finding-visualizer.css
+++ b/src/path-finding-visualizer/path-finding-visualizer.css
@@ -17,12 +17,13 @@
 .Header {
   display: flex;
   width: 100%;
-  height: 6em;
+  /* height: 6em; */
   margin-top: 0;
   background-color: rgb(38, 63, 100);
   flex-direction: row;
   align-self: flex-start;
   justify-self: flex-start;
+  padding: 1%;
 }
 
 .VisualizeButton {
@@ -36,8 +37,8 @@
   -ms-user-select: none;
   /* Internet Explorer/Edge */
 
-  /* width: 150px;
-  height: 35px; */
+  width: 160px;
+  height: fit-content;
   margin-right: 50px;
   padding: 10px;
   font-size: 18px;
@@ -60,13 +61,12 @@
   -ms-user-select: none;
   /* Internet Explorer/Edge */
 
-  width: 150px;
-  height: 35px;
   text-align: left;
   margin-right: 50px;
   font-size: 18px;
   background-color: rgb(38, 63, 100);
   color: White;
+  margin-left: 75px;
   padding: 0px;
   border-width: 0px;
   border-radius: 4px;
